Trying to fix white space on all pages not the front page

--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2595,13 +2595,13 @@ body.front .aurora-sample-layout:after {
   clear: both;
 }
 
-main .aurora-section-first {
+body.front main .aurora-section-first {
   height: 180px;
   clear: both;
   margin-top: -1.5em;
 }
 @media (min-width: 600px) {
-  main .aurora-section-first {
+  body.front main .aurora-section-first {
     width: 100%;
     float: right;
     margin-left: 0;
@@ -2613,7 +2613,7 @@ main .aurora-section-first {
   }
 }
 @media (min-width: 1024px) {
-  main .aurora-section-first {
+  body.front main .aurora-section-first {
     width: 100%;
     clear: right;
     float: right;
@@ -2624,13 +2624,13 @@ main .aurora-section-first {
   }
 }
 
-main .aurora-section-second {
+body.front main .aurora-section-second {
   clear: both;
   margin: auto;
   width: 90%;
 }
 @media (min-width: 600px) {
-  main .aurora-section-second {
+  body.front main .aurora-section-second {
     width: 62.5%;
     float: left;
     margin-right: -100%;
@@ -2640,7 +2640,7 @@ main .aurora-section-second {
   }
 }
 @media (min-width: 1024px) {
-  main .aurora-section-second {
+  body.front main .aurora-section-second {
     width: 56.25%;
     clear: right;
     float: left;
@@ -2650,12 +2650,12 @@ main .aurora-section-second {
   }
 }
 
-main .aurora-section-third {
+body.front main .aurora-section-third {
   margin: auto;
   width: 90%;
 }
 @media (min-width: 600px) {
-  main .aurora-section-third {
+  body.front main .aurora-section-third {
     width: 29.16667%;
     float: right;
     margin-left: 0;
@@ -2664,19 +2664,13 @@ main .aurora-section-third {
   }
 }
 @media (min-width: 1024px) {
-  main .aurora-section-third {
+  body.front main .aurora-section-third {
     width: 31.25%;
     float: right;
     margin-left: 0;
     margin-right: 1.04167%;
     clear: none;
   }
-}
-
-body.page-node .aurora-sample-layout:after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 body.page-node .aurora-sample-layout:after {
@@ -2740,13 +2734,13 @@ body.page-node main .aurora-section-third {
   display: none;
 }
 
-body.page-search .aurora-sample-layout:after {
+body.page-search main .aurora-sample-layout:after {
   content: "";
   display: table;
   clear: both;
 }
 
-body.page-search .aurora-sample-layout:after {
+body.page-search main .aurora-sample-layout:after {
   content: "";
   display: table;
   clear: both;
